# Info

./: CMakeLists.txt  Makefile  compile_commands.json  heap_array.cpp  informatiker_sorted.cpp  queue.cpp  sorted.cpp  stack.cpp  stack_dynamisch.cpp  stack_sorted.cpp  stack_statisch.cpp
Stack/: CMakeLists.txt  main.cpp
